Add metatag to posts

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,6 +8,7 @@ layout: compress
 <!--[if gt IE 8]><!--> <html class="no-js"><!--<![endif]-->
 <head>
     {% include head.html %}
+    <meta property="og:image" content="/assets/img/logo.png" />
 </head>
 <body>
     <!-- Header -->
