--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,9 +22,9 @@
     <meta property="og:url" content="{{ page.url | replace:'index.html','' | prepend: site.url }}">
     <meta property="og:site_name" content="{{ site.title }}">
     {% if page.feature %}{% capture feature %}{{ page.feature }}{% endcapture %}{% unless feature contains 'http://' or feature contains 'https://' %}{% capture feature %}{{ site.url }}/{{ feature }}{% endcapture %}{% endunless %}
-    <meta property="og:image" content="{{ feature }}">
+    <meta property="og:image:url" content="{{ feature }}">
     {% else %}
-    <meta property="og:image" content="{{ site.url }}/assets/img/share.jpg">{% endif %}
+    <meta property="og:image:url" content="{{ site.url }}/assets/img/share.jpg">{% endif %}
     {% if site.google.verify %}
     <!-- Webmaster Tools verfication -->
     <meta name="google-site-verification" content="{{ site.google.verify }}">{% endif %}
